--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,10 +10,10 @@
 		<div>
 		What do you want to work out today? <br>
 			<select name="MuscleGroup">
-				<option value="full" >Full Body</option>
-				<option value="upper">Upper Body</option>
-				<option value="core">Core</option>
-				<option value="lower">Lower Body</option>
+				<option value="Full" >Full Body</option>
+				<option value="Upper">Upper Body</option>
+				<option value="Mid">Core</option>
+				<option value="Lower">Lower Body</option>
 			</select><br>
 		</div>
 		<div>
@@ -28,9 +28,9 @@
 		<div>
 			What type of workout do you want? <br>
 			<select name="Type">
-				<option value="strength">Strength/Free Weights</option>
-				<option value="calisthenic">Calisthenic/Body Weight</option>
-				<option value="aerobic">Aerobic/Cardio</option>
+				<option value="Strength">Strength/Free Weights</option>
+				<option value="Calisthenics">Calisthenic/Body Weight</option>
+				<option value="Aerobic">Aerobic/Cardio</option>
 			</select><br>
 		</div>
 		<div>
