--- a/views/workout.hbs
+++ b/views/workout.hbs
@@ -26,7 +26,7 @@
 	      	<h5>Hover for video tutorial</h5>
 	      </div>
 	       <div class="box-back">
-	      	<iframe width="560" height="315" src={{this.video}} frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	      	<iframe width="560" height="315" src= "{{this.video}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	   	</div>
 	   </div>
 	{{/each}}
