fixed video margins

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,3 +93,11 @@ h5 {
   visibility: visible;
 }
 
+iframe {
+  display: block;
+  width: 475px;
+  height: 350px;
+  margin-left: 12px;
+  margin-top: -4px;
+}
+
