--- a/views/favourites.hbs
+++ b/views/favourites.hbs
@@ -8,7 +8,7 @@
 		crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 	</head>
-	<body>
+	<body background="/images/background.jpg">
 		<h1 class="main-title">Favourite Workouts</h1>
 		<h2 class="subtitle">All your liked workouts are displayed here</h2>
 			{{#each FAVOURITES}}
@@ -23,7 +23,7 @@
 								</p>
 							</div>	
 						{{/each}}
-					<button type="button" class="btn btn-success" id="{{this.favouriteID}}">Remove
+					<button type="button" class="btn btn-danger" id="{{this.favouriteID}}">Remove
 					</button>
 				</div>
 			{{/each}}
@@ -45,7 +45,7 @@ function handleClick(event) {
     event.target = event.target || event.srcElement;
     let element = event.target;
     while (element) {
-        if (element.nodeName === "BUTTON" && /btn-success/.test(element.className)) {
+        if (element.nodeName === "BUTTON" && /btn-danger/.test(element.className)) {
             removeFavourite(element);
             break;
         }
