--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 	crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
-<body background="images/background.jpg">
+<body background="/images/background.jpg">
 	<h1 class="main-title">Make-A-WOD</h1>
 	<h2 class="subtitle">A simple way to create your own workout!</h2>
 	<form action="/workout/submit" method="post">
