--- a/views/favourites.hbs
+++ b/views/favourites.hbs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>{{ title }}</title>
-		<link href="https://fonts.googleapis.com/css?family=Assistant:200&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Mandali&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
 		crossorigin="anonymous">
@@ -10,6 +10,7 @@
 	</head>
 	<body background="/images/background.jpg">
 		<h1 class="main-title">Favourite Workouts</h1>
+		<button type="button" class="btn btn-primary" id="homeButton">Home</button>
 		<h2 class="subtitle">All your liked workouts are displayed here</h2>
 			{{#each FAVOURITES}}
 				<div class="row" id="{{this.favouriteID}}-card">
@@ -23,11 +24,10 @@
 								</p>
 							</div>	
 						{{/each}}
-					<button type="button" class="btn btn-danger" id="{{this.favouriteID}}">Remove
+					<br><button type="button" class="btn btn-danger" id="{{this.favouriteID}}">Remove
 					</button>
 				</div>
 			{{/each}}
-		<button type="button" class="btn btn-primary" id="homeButton">Home</button>
 	</body>
 </html>
 
