final final version

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
 </head>
 <body background="/images/background.jpg">
 	<img src="/images/logo.png" class="logo">
-	<h1 class="home-title">Make-A-WOD</h1>
+	<h1 class="home-title">Create-A-WOD</h1>
 	<h2 class="subtitle">A simple way to create your own workout!</h2>
 	<form action="/workout/submit" method="post">
 		<div id="dropdown">
